k3s/manifests/drawio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drawio
  labels:
    app.kubernetes.io/part-of: productivity
