k3s/manifests/drawio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drawio
  namespace: drawio
spec:
  type: ClusterIP
  selector:
    app: drawio
  ports:
    - name: http
      port: 8080
      targetPort: 8080
