k3s/manifests/drawio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drawio
  namespace: drawio
  annotations:
    tailscale.com/proxy-class: "prod"
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drawio
                port:
                  number: 8080
  tls:
    - hosts:
        - drawio
